# nmt-fastapi-reference

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  changelog.j2  nmtfast-config-default.yaml  pyproject.toml  tasks.py
.github/instructions/: default.instructions.md
.github/workflows/: ci.yml  main-pr-active.yml  main-pr-closed.yml
alembic/: env.py
docker/: Dockerfile  entrypoint.sh  nginx.conf  supervisord.conf
samples/: docker-compose.yaml  nmt-fastapi-reference.code-workspace
samples/.local/: activate.env
src/: main.py
src/app/: main.py  mcp.py  mcp_composite.py  task_loader.py
src/app/core/v1/: auth.py  database.py  discovery.py  mcp.py  mongo.py  settings.py  sqlalchemy.py  tasks.py
src/app/dependencies/v1/: auth.py  database.py  discovery.py  mongo.py  sqlalchemy.py
src/app/errors/v1/: exception_handlers.py  exceptions.py
src/app/models/v1/: gadgets.py  widgets.py
src/app/repositories/v1/: gadgets.py  widgets.py
src/app/routers/v1/: gadgets.py  health.py  upstream.py  widgets.py
src/app/schemas/v1/: gadgets.py  widgets.py
src/app/services/v1/: gadgets.py  health.py  upstream.py  widgets.py
src/app/tasks/v1/: gadgets.py  widgets.py
tests/: conftest.py  test_main.py  test_mcp.py
tests/core/v1/: test_auth.py  test_database.py  test_discovery.py  test_mongo.py  test_settings.py  test_sqlalchemy.py
tests/dependencies/v1/: conftest.py  test_auth.py  test_database.py  test_discovery.py  test_mongo.py  test_settings.py
tests/errors/v1/: test_exception_handlers.py  test_exceptions.py
tests/repositories/v1/: conftest.py  test_gadgets.py  test_widgets.py
tests/routers/v1/: conftest.py  test_gadgets.py  test_health.py  test_upstream.py  test_widgets.py
tests/services/v1/: conftest.py  test_gadgets.py  test_health.py  test_upstream.py  test_widgets.py
tests/tasks/v1/: conftest.py  test_gadgets.py  test_widgets.py
